--- a/vue-learning/index.html
+++ b/vue-learning/index.html
@@ -10,7 +10,12 @@
 <body>
 
     <div id="app">
-        {{ greeting }} ({{ greeting.length }})
+        <p>
+            <input type="text" v-model="greeting">
+        </p>
+        <p>
+            {{ greeting }} ({{ greeting.length }})
+        </p>
     </div>
 
     <script>
@@ -19,6 +24,11 @@
                 return {
                     greeting: 'Hello World'
                 };
+            },
+            mounted() {
+                setTimeout(() => {
+                    this.greeting = 'Changed';
+                }, 3000);                
             }
         }).mount('#app');
     </script>    
